kubernetes/addons/kiali-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  hosts:
    - "infra.backend.com"
  gateways:
    - istio-system/gateway
  http:
    - match:
        - uri:
            prefix: /kiali/
      headers:
        request:
          set:
            X-Forwarded-Port: "80"
      route:
        - destination:
            host: kiali
            port:
              number: 20001
